--- a/responsive.css
+++ b/responsive.css
@@ -4,10 +4,6 @@
     font-size: 32px;
   }
   
-  header-right {
-    display: none;
-  }
-
   .heading h2 {
     font-size: 20px;
   }
@@ -29,6 +25,10 @@
   }
   
   span.menu-icon {
+    color: white;
+    float: right;
+    font-size: 25px;
+    padding: 21px 0;
     display: block;
   }
   
