--- a/stylesheet.css
+++ b/stylesheet.css
@@ -193,6 +193,10 @@ footer {
   padding-top: 30px;
 }
 
-span.menu-icon {
-    display: none;
+.menu-icon {
+  color: white;
+  float: right;
+  font-size: 25px;
+  padding: 21px 0;
+  display: none;
 }
