--- a/stylesheet.css
+++ b/stylesheet.css
@@ -69,6 +69,7 @@ a {
   display: inline-block;
   opacity: 0.8;
   border-radius: 4px;
+  text-align: center;
 }
 
 .btn:hover {
@@ -99,12 +100,11 @@ header {
 
 .header-right {
   float: right;
-  background-color: rgba(255, 255, 255, 0.3);
-  transition: all 0.5s;
+  margin-right: -25px;
 }
 
-.header-right:hover {
-  background-color: rgba(255, 255, 255, 0.5);
+.header-right a:hover {
+  background-color: rgba(255, 255, 255, 0.3);
 }
 
 .header-right a {
@@ -112,6 +112,16 @@ header {
   padding: 0 25px;
   color: white;
   display: block;
+  float: left;
+  transition: all 0.5s;
+}
+
+.menu-icon {
+  color: white;
+  float: right;
+  font-size: 25px;
+  padding: 21px 0;
+  display: none;
 }
 
 .lesson-wrapper {
@@ -123,8 +133,8 @@ header {
 }
 
 .heading {
-  padding-top: 60px;
-  padding-bottom: 30px;
+  padding-top: 80px;
+  padding-bottom: 50px;
   color: #5f5d60;
 }
 
@@ -143,7 +153,7 @@ header {
 
 .lesson-icon p {
   position: absolute;
-  top: 90px;
+  top: 44px;
   width: 100%;
   color: white;
 }
@@ -151,7 +161,7 @@ header {
 .txt-contents {
   width: 80%;
   display: inline-block;
-  margin-top: 20px;
+  margin-top: 15px;
   font-size: 15px;
   color: #b3aeb5;
 }
@@ -191,12 +201,5 @@ footer p {
 footer {
   text-align: center;
   padding-top: 30px;
-}
-
-.menu-icon {
-  color: white;
-  float: right;
-  font-size: 25px;
-  padding: 21px 0;
-  display: none;
+  padding-bottom: 20px;
 }
